force-app/main/default/objects/Sponsorship_Requirement__c/Sponsorship_Requirement__c.object-meta.xml
<CustomObject>
    <label>Sponsorship Requirement</label>
    <nameField>
        <displayFormat>Req-{00000}</displayFormat>
        <label>Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsorship Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>