force-app/main/default/objects/Sponsorship_Requirement__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Requirements1</relationshipName>
    <type>Lookup</type>
</CustomField>