force-app/main/default/objects/Sponsorship_Requirement__c/fields/Date_received_by_Government__c.field-meta.xml
<CustomField>
    <fullName>Date_received_by_Government__c</fullName>
    <label>Date of Receipt - Government</label>
    <type>Date</type>
</CustomField>