force-app/main/default/objects/Sponsorship_Requirement__c/fields/Date_Received_RCAV__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_RCAV__c</fullName>
    <label>Date of Receipt - RCAV</label>
    <type>Date</type>
</CustomField>