force-app/main/default/objects/Sponsorship_Requirement__c/fields/Date_Sent_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_submitted__c</fullName>
    <label>Date of Submission</label>
    <type>Date</type>
</CustomField>