force-app/main/default/objects/Sponsorship_Requirement__c/fields/Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed__c</fullName>
    <label>Date of Signature</label>
    <type>Date</type>
</CustomField>