force-app/main/default/objects/Sponsorship_Requirement__c/fields/Description_of_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Requirement__c</fullName>
    <label>Description of Requirement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>