force-app/main/default/objects/Sponsorship_Requirement__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IMM0008 - Generic Application</fullName>
            </value>
            <value>
                <fullName>IMM0008 Schedule 2</fullName>
            </value>
            <value>
                <fullName>Schedule A</fullName>
            </value>
            <value>
                <fullName>Representtaive Form</fullName>
            </value>
            <value>
                <fullName>Photos</fullName>
            </value>
            <value>
                <fullName>Refugee Story</fullName>
            </value>
            <value>
                <fullName>Documents (various)- UNHCR, RDS, Passports, Birth cert, Marriage, etc.</fullName>
            </value>
            <value>
                <fullName>IMM5373 - Undertaking to sponsor</fullName>
            </value>
            <value>
                <fullName>Sponsor Assessment</fullName>
            </value>
            <value>
                <fullName>In Trust Bank Account</fullName>
            </value>
            <value>
                <fullName>Settlement plan</fullName>
            </value>
            <value>
                <fullName>Budget/Support Calculation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>