force-app/main/default/objects/Sponsorship_Requirement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the requirement's completion</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Received</fullName>
                <default>true</default>
                <label>Not Yet Received</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Pending Signature(s)</fullName>
            </value>
            <value>
                <fullName>Completed/Received</fullName>
            </value>
            <value>
                <fullName>Lost/Dropped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>