force-app/main/default/objects/Sponsorship_Requirement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>